--- a/KN_ProyectoClase/Views/Principal/IniciarSesion.cshtml
+++ b/KN_ProyectoClase/Views/Principal/IniciarSesion.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model KN_ProyectoClase.Models.UsuarioModel
+
+@{
     Layout = "~/Views/Shared/_LayoutExterno.cshtml";
 }
 
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="margin-top:100px">
 
     <div class="col-xl-10 col-lg-12 col-md-9">
 
@@ -10,52 +12,36 @@
             <div class="card-body p-0">
 
                 <div class="row">
-                    <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                    <div class="col-lg-3"></div>
                     <div class="col-lg-6">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Iniciar Sesión</h1>
                             </div>
                             <form class="user">
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user"
-                                           id="exampleInputEmail" aria-describedby="emailHelp"
-                                           placeholder="Enter Email Address...">
+                                    @Html.TextBoxFor(x => x.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificación" })
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-user"
-                                           id="exampleInputPassword" placeholder="Password">
+                                    @Html.TextBoxFor(x => x.Contrasenna, new { @class = "form-control form-control-user", @placeholder = "Contraseña", @type="password" })
                                 </div>
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox small">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                                        <label class="custom-control-label" for="customCheck">
-                                            Remember
-                                            Me
-                                        </label>
-                                    </div>
-                                </div>
-                                <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                    Login
+                                
+                                <a href="index.html" class="btn btn-danger btn-user btn-block">
+                                    Procesar    
                                 </a>
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Login with Google
-                                </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                    <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                </a>
+
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="forgot-password.html">Recuperar Contraseña?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="register.html">Create an Account!</a>
+                                <a class="small" href="register.html">Crear una cuenta!</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
