--- a/KN_ProyectoClase/Views/Principal/IniciarSesion.cshtml
+++ b/KN_ProyectoClase/Views/Principal/IniciarSesion.cshtml
@@ -19,7 +19,14 @@
                                 <h1 class="h4 text-gray-900 mb-4">Iniciar Sesión</h1>
                             </div>
 
-                            @using(Html.BeginForm("IniciarSesion", "Principal"))
+                            @if (ViewBag.Mensaje != null)
+                            {
+                                <div class="alert alert-warning msjCentrado">
+                                    @ViewBag.Mensaje
+                                </div>
+                            }
+
+                            @using (Html.BeginForm("IniciarSesion", "Principal"))
                             {
                                 <div class="form-group">
                                     @Html.TextBoxFor(x => x.Identificacion, new { @class = "form-control form-control-user", @placeholder = "Identificación" })
