--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -17,6 +17,15 @@
 
 </head>
 
+@{ 
+    var nombreUsuario = "Invitad@";
+
+    if (Session["NombreUsuario"] != null)
+    {
+        nombreUsuario = Session["NombreUsuario"].ToString();
+    }
+}
+
 <body id="page-top">
 
     <div id="wrapper">
@@ -101,7 +110,8 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@nombreUsuario</span>
   
                                 <img class="img-profile rounded-circle" src="~/Template/img/undraw_profile.svg" />
                             </a>
