--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 
     <link href="~/Template/css/all.min.css" rel="stylesheet" />
     <link href="~/Template/css/sb-admin-2.min.css" rel="stylesheet" />
+    <link href="~/Template/css/generales.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
 </head>
@@ -112,29 +113,35 @@
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">@nombreUsuario</span>
-  
+
                                 <img class="img-profile rounded-circle" src="~/Template/img/undraw_profile.svg" />
                             </a>
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
 
-                                <a class="dropdown-item" href="@Url.Action("IniciarSesion","Principal")">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Iniciar Sesión
-                                </a>
+                                @if (Session["NombreUsuario"] == null)
+                                {
+                                    <a class="dropdown-item" href="@Url.Action("IniciarSesion","Principal")">
+                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Iniciar Sesión
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a class="dropdown-item" href="#">
+                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Perfil
+                                    </a>
+                                    <a class="dropdown-item" href="#">
+                                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Seguridad
+                                    </a>
+                                    <a class="dropdown-item" href="@Url.Action("CerrarSesion","Principal")" @*data-toggle="modal" data-target="#logoutModal"*@>
+                                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Salir
+                                    </a>
+                                }
 
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Perfil
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Seguridad
-                                </a>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Salir
-                                </a>
                             </div>
                         </li>
 
@@ -186,6 +193,7 @@
     <script src="~/Template/js/bootstrap.bundle.min.js"></script>
     <script src="~/Template/js/jquery.easing.min.js"></script>
     <script src="~/Template/js/sb-admin-2.min.js"></script>
+    <script src="~/Template/js/generales.js"></script>
 
 </body>
 
