--- a/KN_ProyectoClase/Views/Shared/_LayoutExterno.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_LayoutExterno.cshtml
@@ -30,6 +30,7 @@
     <script src="~/Template/js/bootstrap.bundle.min.js"></script>
     <script src="~/Template/js/jquery.easing.min.js"></script>
     <script src="~/Template/js/sb-admin-2.min.js"></script>
+    <script src="~/Template/js/generales.js"></script>
 
 </body>
 
