--- a/KN_ProyectoClase/Views/Oferta/ConsultarOfertasDisponibles.cshtml
+++ b/KN_ProyectoClase/Views/Oferta/ConsultarOfertasDisponibles.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<KN_ProyectoClase.BaseDatos.ConsultarPuestos_Result>
+﻿@model List<KN_ProyectoClase.BaseDatos.ConsultarOfertas_Result>
 
 @{
-    ViewBag.Title = "ConsultarPuestos";
+    ViewBag.Title = "ConsultarOfertas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,7 +9,7 @@
 
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Mantenimiento de Puestos</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Ofertas Disponibles</h6>
         </div>
         <table class="table table-bordered table-hover">
             <thead>
@@ -17,6 +17,9 @@
                     <th>#</th>
                     <th>Nombre</th>
                     <th>Descripción</th>
+                    <th>Cantidad</th>
+                    <th>Salario</th>
+                    <th>Horario</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +30,9 @@
                         <td>@item.Id</td>
                         <td>@item.Nombre</td>
                         <td>@item.Descripcion</td>
+                        <td>@item.Cantidad</td>
+                        <td>$ @item.Salario.ToString("N2")</td>
+                        <td>@item.Horario</td>
                     </tr>
                 }
 
@@ -35,6 +41,4 @@
     </div>
 
 </div>
-
-
 
