--- a/KN_ProyectoClase/Views/Oferta/ConsultarOfertas.cshtml
+++ b/KN_ProyectoClase/Views/Oferta/ConsultarOfertas.cshtml
@@ -1,22 +1,37 @@
-﻿@model List<KN_ProyectoClase.BaseDatos.ConsultarPuestos_Result>
+﻿@model List<KN_ProyectoClase.BaseDatos.ConsultarOfertas_Result>
 
 @{
-    ViewBag.Title = "ConsultarPuestos";
+    ViewBag.Title = "ConsultarOfertas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<style>
+    .Margen {
+        margin: 10px 10px 10px 10px;
+        text-align:right;
+    }
+    </style>
 
 <div class="container-fluid">
 
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Mantenimiento de Puestos</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Mantenimiento de Ofertas</h6>
         </div>
+
+        <div class="Margen">
+        <a class="btn btn-primary" href="@Url.Action("AgregarOferta","Oferta")"> + Agregar</a>
+        </div>
+
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>#</th>
                     <th>Nombre</th>
                     <th>Descripción</th>
+                    <th>Cantidad</th>
+                    <th>Salario</th>
+                    <th>Horario</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +42,9 @@
                         <td>@item.Id</td>
                         <td>@item.Nombre</td>
                         <td>@item.Descripcion</td>
+                        <td>@item.Cantidad</td>
+                        <td>$ @item.Salario.ToString("N2")</td>
+                        <td>@item.Horario</td>
                     </tr>
                 }
 
@@ -35,6 +53,4 @@
     </div>
 
 </div>
-
-
 
