Ajustes de BD, agregar puesto y agregar oferta

--- a/KN_ProyectoClase/Views/Oferta/AgregarOferta.cshtml
+++ b/KN_ProyectoClase/Views/Oferta/AgregarOferta.cshtml
@@ -5,5 +5,44 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.DropDownListFor(m => m.IdPuesto, (IEnumerable<SelectListItem>)ViewBag.PuestoCombo, new { @class = "form-control" })
+<div class="row">
+    <div class="col-lg-3 col-md-2"></div>
+    <div class="col-lg-6 col-md-8">
+
+        <div class="text-center">
+            <h1 class="h4 text-gray-900 mb-4">Crear Oferta</h1>
+        </div>
+
+        @if (ViewBag.Mensaje != null)
+        {
+            <div class="alert alert-warning msjCentrado">
+                @ViewBag.Mensaje
+            </div>
+        }
+
+        @using (Html.BeginForm("AgregarOferta", "Oferta"))
+        {
+            <div class="form-group">
+                @Html.DropDownListFor(m => m.IdPuesto, (IEnumerable<SelectListItem>)ViewBag.PuestoCombo, new { @class = "form-control", @Required = "true" })
+            </div>
+            <div class="form-group">
+                @Html.TextBoxFor(x => x.Cantidad, new { @class = "form-control form-control-user", @placeholder = "Cantidad", @Required = "true" })
+            </div>
+            <div class="form-group">
+                @Html.TextBoxFor(x => x.Salario, new { @class = "form-control form-control-user", @placeholder = "Salario", @Required = "true" })
+            </div>
+            <div class="form-group">
+                @Html.TextBoxFor(x => x.Horario, new { @class = "form-control form-control-user", @placeholder = "Horario", @Required = "true" })
+            </div>
+
+            <div style="text-align: right; width: 200px">
+                <input type="submit" class="btn btn-danger btn-user btn-block" value="Procesar">
+            </div>
+        }
+
+    </div>
+</div>
+
+
+
 
