--- a/KN_ProyectoClase/Views/Oferta/ConsultarOfertas.cshtml
+++ b/KN_ProyectoClase/Views/Oferta/ConsultarOfertas.cshtml
@@ -5,13 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<style>
-    .Margen {
-        margin: 10px 10px 10px 10px;
-        text-align:right;
-    }
-    </style>
-
 <div class="container-fluid">
 
     <div class="card shadow mb-4">
@@ -20,7 +13,7 @@
         </div>
 
         <div class="Margen">
-        <a class="btn btn-primary" href="@Url.Action("AgregarOferta","Oferta")"> + Agregar</a>
+            <a class="btn btn-primary" href="@Url.Action("AgregarOferta","Oferta")"> + Agregar</a>
         </div>
 
         <table class="table table-bordered table-hover">
@@ -28,23 +21,28 @@
                 <tr>
                     <th>#</th>
                     <th>Nombre</th>
-                    <th>Descripción</th>
                     <th>Cantidad</th>
                     <th>Salario</th>
                     <th>Horario</th>
+                    <th>Estado</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
 
                 @foreach (var item in Model)
                 {
+
+                    var disponible = item.Disponible ? "Activo" : "Inactivo";
+
                     <tr>
                         <td>@item.Id</td>
                         <td>@item.Nombre</td>
-                        <td>@item.Descripcion</td>
                         <td>@item.Cantidad</td>
                         <td>$ @item.Salario.ToString("N2")</td>
                         <td>@item.Horario</td>
+                        <td>@disponible</td>
+                        <td><input type="button" class="btn btn-outline-primary" value="Editar" /></td>
                     </tr>
                 }
 
