--- a/KN_ProyectoClase/Views/Puesto/ConsultarPuestos.cshtml
+++ b/KN_ProyectoClase/Views/Puesto/ConsultarPuestos.cshtml
@@ -11,6 +11,11 @@
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">Mantenimiento de Puestos</h6>
         </div>
+
+        <div class="Margen">
+            <a class="btn btn-primary" href="@Url.Action("AgregarPuesto","Puesto")"> + Agregar</a>
+        </div>
+
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
