--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -12,9 +12,10 @@
     <title>Proyecto KN</title>
 
     <link href="~/Template/css/all.min.css" rel="stylesheet" />
-    <link href="~/Template/css/sb-admin-2.min.css" rel="stylesheet" />
+    <link href="~/Template/css/sb-admin-2.css" rel="stylesheet" />
     <link href="~/Template/css/generales.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://cdn.datatables.net/2.2.2/css/dataTables.bootstrap4.css" rel="stylesheet" />
 
 </head>
 
@@ -56,7 +57,7 @@
                 </li>
             }
             else
-            { 
+            {
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("ConsultarOfertasDisponibles", "Oferta")">
                         <i class="fas fa-fw fa-chart-area"></i>
@@ -132,7 +133,7 @@
 
                 </nav>
                 <div class="container-fluid">
-                    <br/>
+                    <br />
                     @RenderBody()
                 </div>
 
@@ -178,6 +179,8 @@
     <script src="~/Template/js/jquery.easing.min.js"></script>
     <script src="~/Template/js/sb-admin-2.min.js"></script>
     <script src="~/Template/js/generales.js"></script>
+    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.bootstrap4.js"></script>
 
 </body>
 
