--- a/KN_ProyectoClase/Template/css/sb-admin-2.css
+++ b/KN_ProyectoClase/Template/css/sb-admin-2.css
@@ -9797,7 +9797,7 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  /*background-color: #f8f9fc;*/
   width: 100%;
   overflow-x: hidden;
 }
