--- a/KN_ProyectoClase/Views/Puesto/ConsultarPuestos.cshtml
+++ b/KN_ProyectoClase/Views/Puesto/ConsultarPuestos.cshtml
@@ -7,41 +7,52 @@
 
 <div class="container-fluid">
 
-    <div class="card shadow mb-4">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Mantenimiento de Puestos</h6>
-        </div>
+    <h5 class="m-0 font-weight-bold text-primary">Mantenimiento de Puestos</h5>
 
-        <div class="Margen">
-            <a class="btn btn-primary" href="@Url.Action("AgregarPuesto","Puesto")"> + Agregar</a>
-        </div>
-
-        <table class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Nombre</th>
-                    <th>Descripción</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.Id</td>
-                        <td>@item.Nombre</td>
-                        <td>@item.Descripcion</td>
-                        <td><a href="@Url.Action("ActualizarPuesto","Puesto", new { q = item.Id })"><i class="fa fa-edit"></i></a></td>
-                    </tr>
-                }
-
-            </tbody>
-        </table>
+    <div class="Margen">
+        <a class="btn btn-primary" href="@Url.Action("AgregarPuesto","Puesto")"> + Agregar</a>
     </div>
+
+    <table id="example" class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Nombre</td>
+                    <td>@item.Descripcion</td>
+                    <td><a href="@Url.Action("ActualizarPuesto","Puesto", new { q = item.Id })"><i class="fa fa-edit"></i></a></td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
 
 </div>
 
+<script src="~/Template/js/jquery.min.js"></script>
+<script>
 
+    $(document).ready(function () {
 
+        var table = new DataTable('#example', {
+            language: {
+                url: '//cdn.datatables.net/plug-ins/2.2.2/i18n/es-ES.json',
+            },
+            columnDefs: [
+                { "className": "dt-left", "targets": "_all" }
+            ]
+        });
+
+    });
+
+</script>
