--- a/KN_ProyectoClase/Views/Shared/Error.cshtml
+++ b/KN_ProyectoClase/Views/Shared/Error.cshtml
@@ -2,12 +2,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>Se presentó un error inesperado.</h1>
+        <h2>Por favor contacte con el administrador del sistema.</h2>
     </hgroup>
 </body>
 </html>
