--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -112,11 +112,11 @@
                                 }
                                 else
                                 {
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="@Url.Action("ActualizarDatos","Usuario")">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Actualizar Datos
                                     </a>
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="@Url.Action("CambiarAcceso","Usuario")">
                                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Cambiar Contraseña
                                     </a>
