--- a/KN_ProyectoClase/Views/Shared/_LayoutExterno.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_LayoutExterno.cshtml
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Proyecto KN</title>
+    <title>Sistema Web KN</title>
 
     <link href="~/Template/css/all.min.css" rel="stylesheet" />
     <link href="~/Template/css/sb-admin-2.min.css" rel="stylesheet" />
