--- a/KN_ProyectoClase/Views/Principal/Inicio.cshtml
+++ b/KN_ProyectoClase/Views/Principal/Inicio.cshtml
@@ -15,19 +15,53 @@
 
     @foreach (var item in Model)
     {
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="col-lg-3 col-md-6 col-sm-12">
 
             <div class="card" style="margin-bottom:27px;">
-                    
-                <img class="card-img-top" src="..." alt="Card image cap">
+
+                <div style="text-align:center">
+                    <img class="card-img-top" src="@item.Imagen" style="width:60%; height:175px;" alt="Imagen No cargada">
+                </div>
 
                 <div class="card-body">
                     <h5 class="card-title">@item.Nombre</h5>
                     <h5 class="card-title">Salario: $@item.Salario.ToString("N2")</h5>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Espacios: @item.Cantidad</h5>
+                    <h5 class="card-title">Horario: @item.Horario</h5>
+
+                    @if (Session["IdPerfilUsuario"] != null)
+                    {
+                        <div class="text-center">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                Ver más
+                            </button>
+                        </div>
+                    }
+
                 </div>
             </div>
 
         </div>
     }
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
 </div>
