--- a/KN_ProyectoClase/Views/Shared/Error.cshtml
+++ b/KN_ProyectoClase/Views/Shared/Error.cshtml
@@ -10,3 +10,9 @@
     </hgroup>
 </body>
 </html>
+
+@*
+    --2. Modal de aplicar en la vista de ofertas disponibles
+    --3. Administrador --> Cambiar el estado de la oferta de cada usuario
+    --4. Pantalla de inicio para los administradores
+*@
