--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("ConsultarOfertas", "Oferta")">
+                        <a class="nav-link" href="@Url.Action("", "")">
                             <i class="fas fa-fw fa-chart-area"></i>
                             <span>Seg. Ofertas</span>
                         </a>
@@ -75,7 +75,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("ConsultarOfertasDisponibles", "Oferta")">
+                        <a class="nav-link" href="@Url.Action("ConsultarOfertasAplicadas", "Oferta")">
                             <i class="fas fa-fw fa-chart-area"></i>
                             <span>Ver Ofertas Aplicadas</span>
                         </a>
