--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("ConsultarOfertasDisponibles", "Oferta")">
                             <i class="fas fa-fw fa-chart-area"></i>
-                            <span>Ver Ofertas</span>
+                            <span>Ver Ofertas Disponibles</span>
                         </a>
                     </li>
 
