--- a/KN_ProyectoClase/Views/Shared/_Layout.cshtml
+++ b/KN_ProyectoClase/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("", "")">
+                        <a class="nav-link" href="@Url.Action("SeguimientoOfertas", "Oferta")">
                             <i class="fas fa-fw fa-chart-area"></i>
                             <span>Seg. Ofertas</span>
                         </a>
